# Website

./: .bettercodehub.yml  .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  flake.nix  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG.md  FEATURE_REQUEST.md  OTHER.md
.github/workflows/: ci.yaml  deploy.yaml
docs/: SERVERCONFIG.md  TESTING.md  services-and-features.md
loefsys/: __init__.py  urls.py  wsgi.py
loefsys/events/: __init__.py  apps.py
loefsys/events/models/: __init__.py  choices.py  event.py  managers.py  registration.py
loefsys/events/tests/: test_models.py
loefsys/groups/: __init__.py  apps.py
loefsys/groups/models/: __init__.py  board.py  choices.py  committee.py  fraternity.py  group.py  membership.py  year_club.py
loefsys/groups/tests/: test_models.py
loefsys/reservations/: __init__.py  apps.py
loefsys/reservations/models/: __init__.py  boat.py  choices.py  material.py  reservable.py  reservation.py  room.py
loefsys/reservations/tests/: test_models.py
loefsys/scripts/: __init__.py  code_scripts.py  django_scripts.py  sphinx_scripts.py
loefsys/settings/: __init__.py  admin.py  auth.py  base.py  database.py  email.py  locale.py  logging.py  security.py  storage.py  templates.py  test.py
loefsys/users/: __init__.py  apps.py
loefsys/users/models/: __init__.py  address.py  choices.py  member.py  membership.py  name_mixin.py  study_registration.py  user.py
loefsys/users/tests/: test_models.py
resources/: deploy.sh  dhparam.pem  docker-compose.yaml.template  entrypoint.sh  giphouse.nginx.conf  nginx.conf  reservations.nginx.conf  run_tests.bat  security.txt  setup.sql.template  shell.nix
website/: .coverage  manage.py
website/courses/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
website/courses/migrations/: 0001_initial.py  0002_auto_20190310_2130.py  0002_auto_20190928_1203.py  0002_auto_20191027_1221.py  0003_auto_20190315_1541.py  0003_auto_20210205_1716.py  0003_semester_is_archived.py  0004_auto_20190411_2213.py  0004_auto_20220204_1357.py  0004_remove_semester_is_archived.py  0005_auto_20190425_1632.py  0006_auto_20190508_1627.py  0007_auto_20190509_1312.py
website/courses/templates/: courses.html
website/courses/tests/: test_forms.py  test_models.py  test_views.py
website/giphousewebsite/: admin.py  context_processors.py  menus.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
website/giphousewebsite/settings/: base.py  development.py  production.py
website/giphousewebsite/templates/: 400.html  403.html  404.html  500.html  about.html  base.html  clients.html  contact.html  footer.html  for-companies.html  header.html  index.html  projects.html  wayofworking.html
website/giphousewebsite/templatetags/: menu.py
website/giphousewebsite/tests/: test_models.py
website/github_oauth/: apps.py  backends.py  links.py  urls.py  views.py
website/github_oauth/templatetags/: github_tags.py
website/github_oauth/tests/: test_auth_backend.py  test_tags.py  test_views.py
website/lecture_registrations/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
website/lecture_registrations/migrations/: 0001_initial.py
website/mailing_lists/: admin.py  apps.py  forms.py  gsuite.py  models.py  services.py
website/mailing_lists/migrations/: 0001_initial.py  0002_auto_20200305_0922.py  0003_auto_20200317_1050.py  0003_auto_20200317_1050_squashed_0004_remove_mailinglist_name.py  0004_auto_20200421_2218_squashed_0005_auto_20200422_1243.py  0004_remove_mailinglist_name.py  0005_auto_20200422_1503_squashed_0005_auto_20200430_1207.py  0006_auto_20200504_1134.py  0007_auto_20200513_1512.py  0008_mailinglist_gsuite_group_name.py  0009_auto_20200531_1700.py
website/mailing_lists/tests/: test_admin.py  test_forms.py  test_gsuite.py  test_models.py
website/peer_review/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
website/peer_review/migrations/: 0001_initial.py  0001_squashed_0004_auto_20190227_1652.py  0002_auto_20190215_1422.py  0002_auto_20190301_1240.py  0002_auto_20190313_1651.py  0002_auto_20190508_1620.py  0003_auto_20190315_0942.py  0003_question_about_someone_else.py  0004_auto_20190227_1652.py  0004_auto_20190315_1131.py  0004_remove_questionnaire_active.py
website/peer_review/templates/: form_draft.html  peer_review.html  peer_review_form.html  question_types.html  succes.html
website/peer_review/tests/: test_admin.py  test_models.py  test_views.py
website/projects/: admin.py  apps.py  awssync.py  awssync_checks.py  forms.py  githubsync.py  models.py  urls.py  views.py
website/projects/aws/: awsapitalker.py  awssync.py  awssync_checks.py  awssync_checks_permissions.py  awssync_refactored.py  awssync_structs.py
website/projects/migrations/: 0001_initial.py  0002_auto_20190512_1243.py  0002_auto_20191107_1344.py  0002_project_comments.py  0002_project_email.py  0003_auto_20190515_0936.py  0003_auto_20191010_1304.py  0003_auto_20200130_1532.py  0004_auto_20200131_1350.py  (+27 more)
website/questionnaires/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py  widgets.py
website/registrations/: admin.py  apps.py  forms.py  models.py  team_assignment.py  urls.py  views.py
website/room_reservation/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
website/tasks/: admin.py  apps.py  models.py
(+131 files in other folders)
