[tool.poetry]
name = "giphousewebsite"
description = "GiPHouse website based on Django Framework"
version = "1.0.0"
authors = [
  "joren485", "pingiun", "keukentrap", "adiehl96", "Pegasystem", "BierBrigadier", 
  "avanderjagt", "mennobartels", "AJKruijsse", " JelmerHinssen", "JobDoesburg", " yhogewind", "lukovdm"
]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
Django = "~3.1"
requests = "^2.22"
libsass = "^0.20"
django-compressor = "^2.3"
django-sass-processor = "^0.8"
django-bootstrap4 = "^2.3"
uwsgi = {version = "^2.0",optional = true}
psycopg2-binary = {version = "^2.8",optional = true}
Pillow = "^8.0"
django-admin-autocomplete-filter = {git = "https://github.com/farhan0581/django-admin-autocomplete-filter.git"}
google-api-python-client = "^1.12"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
pygithub = "^1.46"
cryptography = "^3.3"
ortools = "^8.1"

[tool.poetry.extras]
production = ["uwsgi", "psycopg2-binary"]

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-import-order = "^0.18.1"
coverage = {extras = ["toml"], version = "^5.3"}
pydocstyle = "^5.0"
freezegun = "^1.0"
Faker = "^5"
black = {version = "^20.8b1"}

[tool.black]
line-length = 119
target-version = ["py38"]
exclude = '''
/(
  migrations
  | website/giphousewebsite/settings
)/
'''

[tool.coverage.run]
branch = true
source = ["website"]
omit = ["website/manage.py", "website/giphousewebsite/wsgi.py", "website/*/migrations/*", "website/*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100.0
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

