[tool.poetry]
name = "giphousewebsite"
description = "GiPHouse website based on Django Framework"
version = "1.0.0"
authors = [
  "joren485", "pingiun", "keukentrap", "adiehl96", "Pegasystem", "BierBrigadier", 
  "avanderjagt", "mennobartels", "AJKruijsse", " JelmerHinssen", "JobDoesburg", " yhogewind", "lukovdm"
]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
requests = "^2.25.1"
libsass = "^0.20.1"
django-compressor = "^2.4.1"
django-sass-processor = "^1.0.1"
django-bootstrap4 = "^3.0.0"
uwsgi = {version = "^2.0",optional = true}
psycopg2-binary = {version = "^2.8.6", optional = true}
Pillow = "^8.2.0"
django-admin-autocomplete-filter = {git = "https://github.com/farhan0581/django-admin-autocomplete-filter.git", branch="pre_release"}
google-api-python-client = "^2.2.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.4"
pygithub = "^1.46"
cryptography = "^3.4.7"
ortools = "^8.2.8710"
PyGithub = "^1.54.1"
uWSGI = {version = "^2.0.19", optional = true}

[tool.poetry.extras]
production = ["uwsgi", "psycopg2-binary"]

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
flake8-import-order = "^0.18.1"
coverage = {version = "^5.5", extras = ["toml"]}
pydocstyle = "^6.0.0"
freezegun = "^1.1.0"
Faker = "^8.1.1"
black = "^21.10b0"

[tool.black]
line-length = 119
target-version = ["py38"]
exclude = '''
/(
  migrations
  | website/giphousewebsite/settings
)/
'''

[tool.coverage.run]
branch = true
source = ["website"]
omit = ["website/manage.py", "website/giphousewebsite/wsgi.py", "website/*/migrations/*", "website/*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100.0
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

