[tool.poetry]
name = "giphousewebsite"
description = "GiPHouse website based on Django Framework"
version = "1.0.0"
authors = [
  "joren485", "pingiun", "keukentrap", "adiehl96", "Pegasystem", "BierBrigadier", 
  "avanderjagt", "mennobartels", "AJKruijsse", " JelmerHinssen", "JobDoesburg", " yhogewind", "lukovdm"
]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
requests = "^2.28.1"
libsass = "^0.21.0"
django-compressor = "^4.1"
django-sass-processor = "^1.2.2"
uwsgi = {version = "^2.0",optional = true}
psycopg2-binary = {version = "^2.9.3", optional = true}
Pillow = "^8.2.0"
django-admin-autocomplete-filter = {git = "https://github.com/farhan0581/django-admin-autocomplete-filter.git", branch="pre_release"}
google-api-python-client = "^2.65.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.7.1"
pygithub = "^1.57"
cryptography = "^38.0.3"
ortools = "^9.4.1874"
PyGithub = "^1.54.1"
uWSGI = {version = "^2.0.19", optional = true}
admin-totals = "^1.0.1"
django-bootstrap5 = "^22.1"
django-easy-admin-object-actions = "^1.1.0"

[tool.poetry.extras]
production = ["uwsgi", "psycopg2-binary"]

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-import-order = "^0.18.1"
coverage = {version = "^6.5.0", extras = ["toml"]}
pydocstyle = "^6.0.0"
freezegun = "^1.2.2"
Faker = "^8.1.1"
black = "^22.10.0"

[tool.black]
line-length = 119
target-version = ["py38"]
exclude = '''
/(
  migrations
  | website/giphousewebsite/settings
)/
'''

[tool.coverage.run]
branch = true
source = ["website"]
omit = ["website/manage.py", "website/giphousewebsite/wsgi.py", "website/*/migrations/*", "website/*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100.0
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

